--- a/order.html
+++ b/order.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Account - Niger.net</title>
+    <title>Orders - Niger.net</title>
     <link rel="stylesheet" href="css/base.css?v=1.0" />
-    <link rel="stylesheet" href="css/account.css" />
+    <link rel="stylesheet" href="css/order.css" />
 
     <!--============Icon Cdn==============-->
     <link
@@ -100,13 +100,16 @@
                 </div>
               </li>
               <li><a href="blogs.html">BLOG</a></li>
+              <!-- <li><a href="#">ABOUT US</a></li> -->
               <li><a href="contact.html">CONTACT US</a></li>
             </ul>
           </nav>
 
           <div class="header-action-right flex fs-body-large">
             <div id="showSearch" class="header-action-icon">
+              <!-- <a class="search-active" href="#"> -->
               <i class="uil uil-search"></i>
+              <!-- </a> -->
             </div>
             <div class="header-action-icon">
               <a href="wishlist.html"><i class="uil uil-heart"></i></a>
@@ -118,7 +121,9 @@
               </a>
             </div>
             <div id="showMenu" class="header-action-icon">
+              <!-- <a href="#"> -->
               <i class="uil uil-align-justify"></i>
+              <!-- </a> -->
             </div>
           </div>
         </div>
@@ -155,7 +160,6 @@
             <ul id="category-list"></ul>
           </div>
         </div>
-
         <svg style="display: none">
           <symbol id="warning" viewBox="0 0 24 24">
             <path
@@ -166,41 +170,45 @@
         </svg>
       </header>
 
-      <main id="account-page">
-        <section class="account-feature">
+      <main id="main">
+        <section class="order-feature mb-40">
           <div class="custom-container">
             <a href="index.html">Home</a> <span>/</span>
-            <span class="text-red">Account</span>
+            <span class="text-red">Orders</span>
           </div>
         </section>
-        <div class="custom-container">
-          <h1>
-            My Account
-            <span id="logout" class="logout-link">Logout</span>
-          </h1>
 
-          <hr class="divider-small" />
+        <section class="custom-container">
+          <nav>
+            <ul class="bar-nav">
+              <li>
+                <span class="active" data-tab="delivered" role="button"
+                  >En cours/Livrés</span
+                >
+              </li>
+              <li>
+                <span data-tab="canceled" role="button"
+                  >Annulées/Retournées</span
+                >
+              </li>
+              <li>
+                <span data-tab="reported" role="button">Reportée/Rejetée</span>
+              </li>
+            </ul>
+          </nav>
 
-          <div class="grid">
-            <div class="grid-item two-thirds">
-              <h2 class="section-title">Order History</h2>
-              <div id="last-order-content" class="last-order"></div>
-              <p id="nbr-orders"></p>
+          <section class="orders-content">
+            <div class="tab-content" id="delivered">
+              <ul class="cart-items"></ul>
             </div>
-
-            <div class="grid-item one-third">
-              <h2 class="section-title">Account Details</h2>
-              <h3 id="name" class="account-name"></h3>
-              <address id="address" class="account-address"></address>
-              <p>
-                <a id="nbr-address" href="addresses.html"></a>
-              </p>
-              <p>
-                <a id="messages-link" href="messages.html"></a>
-              </p>
+            <div class="tab-content" id="canceled">
+              <ul class="cart-items"></ul>
             </div>
-          </div>
-        </div>
+            <div class="tab-content" id="reported">
+              <ul class="cart-items"></ul>
+            </div>
+          </section>
+        </section>
       </main>
 
       <div id="shopify-section-footer" class="shopify-section">
@@ -344,6 +352,6 @@
     </div>
 
     <script src="js/base.js"></script>
-    <script src="js/account.js"></script>
+    <script src="js/order.js"></script>
   </body>
 </html>
